fj/src/test/resources/scope-paper/inh-cyclic2.fj
// inheritance/cyclic.spt:one-step inheritance cycle
class A extends B {
  A() { super(); }
}
class B extends A {
  B() { super(); }
}
